<resources>
    <string name="app_name">HexagonApp</string>

    <!-- Main Activity -->
    <string name="main_activity_toast_message_notifications_permission_not_granted">O app não mostrará notificações</string>
    <string name="main_activity_toast_message_notifications_permission_granted">O app mostrará notificações</string>

    <string name="no_connection_notification_title">Conexâo perdida</string>
    <string name="no_connection_notification_description">Alguns recursos podem não estar funcionando como esperado.</string>


    <!-- Main Screen -->
    <string name="iconCloseForCloseMenuDrawer">Close drawer</string>"
    <string name="iconHomeForNavigateToHomeScreenMenuDrawer">Home Screen</string>"
    <string name="iconAddForNavigateToFormScreenMenuDrawer">Form Screen</string>"
    <string name="iconForNavigateToInactiveScreenMenuDrawer">Inactive Screen</string>"
    <string name="iconForNavigateToDevProfileScreenMenuDrawer">Dev Profile Screen</string>"
    <string name="iconForHelpMenuDrawer">Help</string>"
    <string name="iconAddForNavigateToFormFloatingButton">add button to form screen</string>"
    <string name="iconMoreForInfoAndConfiguration">More - Configuration</string>"
    <string name="iconListForOpenMenuDrawer">Open drawer</string>"
    <string name="iconBackForNavigateUp">navigate to back</string>"

    <!-- SnackBarHelp -->
    <string name="snackBarHelpMessage">Arraste para o lado para deletar\n👈</string>

    <!--- Drawer menu items -->
    <string name="menuDrawerHomeOption">Principal</string>
    <string name="menuDrawerInsertOption">Adicionar</string>
    <string name="menuDrawerInactiveOption">Inativos</string>
    <string name="menuDrawerDevProfileOption">Perfil do desenvolvedor</string>
    <string name="menuDrawerHelpOption">Ajuda</string>

    <string name="topAppBarActiveTitle">Ativos</string>
    <string name="topAppBarDevProfileTitle">Desenvolvedor</string>
    <string name="topAppBarFormTitle">Formulário</string>
    <string name="topAppBarInactiveTitle">Inativos</string>

    <!--- Personal Profile List -->
    <string name="swipeToDismissBoxIconDescriptionDelete">Remove Icon</string>
    <string name="swipeToDismissBoxIconDescriptionUpdate">Update Icon</string>
    <string name="swipeToDismissBoxLabelDelete">Remover</string>
    <string name="swipeToDismissBoxLabelActivate">Ativar</string>
    <string name="swipeToDismissBoxLabelInactive">Desativar</string>

    <!--- Bottom sheet dialog settings -->
    <string name="bottomSheetSettingsTitle">Configurações</string>
    <string name="bottomSheetSettingsSwitchDarkModeLabel">Modo Noturno</string>
    <string name="bottomSheetSettingsSwitchIconCheckDescription">CheckIcon</string>
    <string name="bottomSheetSettingsSwitchShowNotificationsLabel">Notificações</string>

    <!-- Form -->
    <string name="updatePhotoDescriptionButton">Update Photo</string>
    <string name="userProfileDescription">User profile</string>

    <string name="profileIcon">Profile icon</string>
    <string name="inputNameLabel">Digite seu nome</string>
    <string name="inputNamePlaceHolder">Digite seu nome</string>

    <string name="cpfIcon">Doc icon</string>
    <string name="inputCpfLabel">Digite seu CPF</string>
    <string name="inputCpfPlaceHolder">Digite seu CPF</string>

    <string name="locationIcon">Location icon</string>
    <string name="inputLocationLabel">Digite sua cidade</string>
    <string name="inputLocationPlaceHolder">Digite sua cidade</string>

    <string name="dateIcon">date icon</string>
    <string name="inputDateOfBirthLabel">Data de nascimento</string>
    <string name="inputDateOfBirthPlaceHolder">Data de nascimento</string>

    <string name="switchOptionActiveProfileLabelDescription">Ativo:</string>
    <string name="switchOptionActiveProfileDescription">Active switch</string>

    <string name="saveIconButton">Save button</string>

    <string name="titleAlertDialogConfirm">Confirmar</string>
    <string name="textAlertDialogConfirm">Confirma a adição?</string>

    <string name="dataPickerConfirmButtonText">Selecionar data</string>


    <!-- Dev Profile Screen -->
    <string name="loadingMessagingText">Carregando…</string>
    <string name="errorMessagingText">Erro ao carregar informações</string>
    <string name="buttonRetryLoadUserInfoText">Tentar novamente</string>
    <string name="buttonRetryLoadUserInfoIconDescription">Icon refresh</string>
    <string name="repositoriesTitle">repositórios</string>
    <string name="repositoryURItext">Ver repositório</string>
    <string name="devProfileImageDescription">Foto do desenvolvdedor</string>
    <string name="shareSheetProfileUrlTile">Compartilhe meu perfil do Linkedin</string>
    <string name="copyToClipboardToastMessage">Link do Linkedin copiado para área de tranferência</string>
    <string name="copyToClipboardToastMessageLabel">Link do Linkedin copiado para área de tranferência</string>
    <string name="LinkedinProfileUrl">https://www.linkedin.com/in/leonardotissi/</string>
    <string name="shareProfileIconDescription">Share Profile</string>

    <!-- Modal Bottom Sheet Share Profile -->
    <string name="ModalBottomSheetShareTitleText">Perfil no linkedin</string>
    <string name="qrCodeDescriptionText">Qr Code Image from profile url</string>
    <string name="ModalBottomSheetShareShareButtonText">Compartilhar</string>
    <string name="ModalBottomSheetShareCopyButtonText">Copiar</string>


    <!--- PersonalProfileLayout -->
    <string name="personalProfileImageDescription">user Photo</string>
    <string name="personalProfileCPFDescription">CPF icon</string>
    <string name="personalProfileDateOfBirthDescription">date of birth icon</string>

    <!-- Setup Notifications -->
    <string name="channel_name">Principal</string>
    <string name="channel_description">Publicações principais do App</string>

    <!-- Common -->
    <string name="commonOk">OK</string>
    <string name="commonConfirm">Confirmar</string>
    <string name="commonDismiss">Cancelar</string>

</resources>